[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
webrtc = { workspace = true }

shellwords = "1.1.0"
