[package]
name = "libwish"
edition.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
webrtc = { workspace = true }

http = "1.0.0"
reqwest = { version = "0.12", features = [
    "rustls-tls",
], default-features = false }
parse_link_header = "0.3"
base64 = "0.22.1"
url = "2.5"
