[package]
name = "libwish"
edition.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, features = [
    "rustls-tls",
], default-features = false }
url = { workspace = true }
webrtc = { workspace = true }

parse_link_header = "0.4"
