[package]
name = "libwish"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
webrtc = { workspace = true }

parse_link_header = "0.4"
