[package]
name = "live777-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
serde = { workspace = true, features = ["serde_derive"] }
async-trait = "0.1"
serde_json = "1.0.114"
redis = { version = "0.25", features = ["tokio-comp"] }
chrono = "0.4"
anyhow = "1.0"
live777-http = { path = "../live777-http", optional = true }
reqwest = { version = "0.11.24", features = [
    "rustls-tls",
], default-features = false }
tracing = "0.1"

[features]
default = ["storage_operate"]
full = ["storage_operate", "node_operate"]
storage_operate = []
node_operate = ["dep:live777-http"]
