[package]
name = "net4mqtt"
description = "net (TCP/UDP) over mqtt tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
portpicker = "0.1.1"
rumqttd = "0.19.0"
tokio-test = "0.4.4"
reqwest = { workspace = true, features = ["socks"] }

[dependencies]
anyhow = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }

lru_time_cache = "0.11.11"
kcp = "0.6"
rand = "0.9"
rumqttc = { version = "0.24.0", features = ["url"] }
socks5-server = "0.10.1"

