[package]
name = "rtsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }

webrtc = { workspace = true }
sdp = { workspace = true }
serde = { workspace = true }

cli = { path = "../cli" }

rtsp-types = "0.1.1"
sdp-types = "0.1.6"
portpicker = "0.1.1"
md-5 = "0.10"
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }