[package]
name = "whip-whep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
webrtc = { git = "https://github.com/webrtc-rs/webrtc" }
anyhow = "1.0"
bytes = "1.4.0"
reqwest = "0.11.20"
parse_link_header = "0.3"
