[package]
name = "net4mqtt"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
portpicker = "0.1.1"
rumqttd = "0.19.0"
tokio-test = "0.4.4"
reqwest = { version = "0.12.7", features = ["socks"] }

[dependencies]
utils = { path = "../../libs/utils" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

lru_time_cache = "0.11.11"
url = "2.5.2"
kcp = "0.5.3"
rand = "0.8.5"
rumqttc = "0.24.0"
socks5-server = "0.10.1"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "sync"] }
