[package]
name = "net4mqtt"
description = "net (TCP/UDP) over mqtt tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
netmqtt = { path = "../../libs/netmqtt" }
utils = { path = "../../libs/utils" }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

url = "2.5.2"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "sync"] }
