[package]
name = "whepfrom"
description = "WHEP to RTP tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cli = { path = "../../libs/cli" }
rtsp = { path = "../../libs/rtsp" }
libwish = { path = "../../libs/libwish" }
signal = { path = "../../libs/signal" }
utils = { path = "../../libs/utils" }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
webrtc = { workspace = true }

scopeguard = "1.2.0"
