[package]
name = "whepfrom"
description = "WHEP to RTP/RTSP tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
cli = { path = "../../libs/cli" }
rtsp = { path = "../../libs/rtsp" }
libwish = { path = "../../libs/libwish" }
signal = { path = "../../libs/signal" }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
webrtc = { workspace = true }
scopeguard = "1.2.0"
sdp = "0.6.2"
portpicker = "0.1.1"
url = "2.5.2"
