[package]
name = "whipinto"
version = "0.1.0"
edition = "2021"

[dependencies]
cli = { path = "../../libs/cli" }
libwish = { path = "../../libs/libwish" }
signal = { path = "../../libs/signal" }
utils = { path = "../../libs/utils" }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
webrtc = { workspace = true }

bytes = "1.6.0"
scopeguard = "1.2.0"
