[package]
name = "whipinto"
description = "RTP to WHIP tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cli = { path = "../../libs/cli" }
libwish = { path = "../../libs/libwish" }
signal = { path = "../../libs/signal" }
utils = { path = "../../libs/utils" }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
webrtc = { workspace = true }

bytes = "1.6.0"
scopeguard = "1.2.0"
